<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".panel_opcion_pasajero"
    android:background="@drawable/min">

    <Button
        android:id="@+id/btn_historico"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/historico"
        android:background="@drawable/button"
        android:textColor="#2196F3"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.546" />

    <Button
        android:id="@+id/btn_datos_B_C_p"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/datos_bus_conductor"
        android:background="@drawable/button"
        android:textColor="#2196F3"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.684" />

    <Button
        android:id="@+id/btn_map_gsm"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/visualizaci_n_gsm"
        android:background="@drawable/button"
        android:textColor="#2196F3"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29" />

    <Button
        android:id="@+id/btn_map_SigFox"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/visualizaci_n_sigfox"
        android:background="@drawable/button"
        android:textColor="#2196F3"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.119" />

    <Button
        android:id="@+id/btn_out_p"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:text="@string/cerrar_sesion"
        android:background="@drawable/button"
        android:textColor="#2196F3"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />

    <Button
        android:id="@+id/btn_select_parada"
        android:layout_width="145dp"
        android:layout_height="61dp"
        android:text="@string/seleccionar_paradas"
        android:background="@drawable/button"
        android:textColor="#2196F3"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.422" />
</androidx.constraintlayout.widget.ConstraintLayout>